Add button hovers

--- a/index.html
+++ b/index.html
@@ -33,15 +33,14 @@
     <article id="new-idea-article" class="new-idea-article">
       <section>
         <h2 class='new-idea-header'>Example Idea 1</h2>
-        <img class="delete-image" src="assets/delete.svg" alt="">
+        <button class="delete-image" type="button" name="button"></button>
       </section>
 
       <p class='new-idea-body'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pharetra augue et risus tincidunt, id pellentesque risus maximus. </p>
 
       <section class="new-idea-footer">
-          <img class="upvote-image" src="assets/upvote.svg" alt="">
-          <img class="downvote-image" src="assets/downvote.svg" alt="">
-
+        <button class="upvote-image" type="button" name="button"></button>
+        <button class="downvote-image" type="button" name="button"></button>
         <h3 class="h3-footer">quality:</h3><h3>swill</h3>
       </section>
     </article>
