add persist local storage and delete from local storage

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </form>
 
     <article id="new-idea-article" class="new-idea-article">
-      <section>
+      <!-- <section class="title-container">
         <h2 class='new-idea-header'>Example Idea 1</h2>
         <button class="delete-image" type="button" name="button"></button>
       </section>
@@ -42,7 +42,7 @@
         <button class="upvote-image" type="button" name="button"></button>
         <button class="downvote-image" type="button" name="button"></button>
         <h3 class="h3-footer">quality:</h3><h3>swill</h3>
-      </section>
+      </section> -->
     </article>
 
 
