improvements kind of not really on the editable text fields and delete from storage feature

--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
     </form>
 
     <article id="new-idea-article" class="new-idea-article">
-      <!-- <section class="title-container">
-        <h2 class='new-idea-header'>Example Idea 1</h2>
+      <section class="title-container">
+        <input type="text" class='new-idea-header' value='Example Idea' maxlength="30" size="35">
         <button class="delete-image" type="button" name="button"></button>
       </section>
 
-      <p class='new-idea-body'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pharetra augue et risus tincidunt, id pellentesque risus maximus. </p>
+      <input type="text" class='new-idea-body' value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pharetra augue et risus tincidunt, id pellentesque risus maximus." maxlenghth="200" size="225">
 
       <section class="new-idea-footer">
         <button class="upvote-image" type="button" name="button"></button>
         <button class="downvote-image" type="button" name="button"></button>
-        <h3 class="h3-footer">quality:</h3><h3>swill</h3>
-      </section> -->
+        <h3 class="h3-footer">quality:</h3><h3 id="quality">swill</h3>
+      </section>
     </article>
 
 
