add uparrow functionality

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 
     </section>
 
-
     <form class="search" action="index.html" method="post">
       <input class='input-search' type="search" name="search" value="Search">
     </form>
@@ -41,11 +40,9 @@
       <section class="new-idea-footer">
         <button class="upvote-image" type="button" name="button"></button>
         <button class="downvote-image" type="button" name="button"></button>
-        <h3 class="h3-footer">quality:</h3><h3 id="quality">swill</h3>
+        <h3 class="h3-footer">quality:</h3><h3 class="quality">swill</h3>
       </section>
     </article>
-
-
 
     <footer>Created by Jason Lucas and Evan Miller</footer>
 
