made adjustments to the body text area script and html syntax from an input element

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <button class="delete-image" type="button" name="button"></button>
       </section>
 
-      <input type="text" class='new-idea-body' value="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pharetra augue et risus tincidunt, id pellentesque risus maximus." maxlenghth="200" size="225">
+      <textarea rows="4" cols="50" class='new-idea-body' placeholder="Body"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pharetra augue et risus tincidunt, id pellentesque risus maximus."></textarea>
 
       <section class="new-idea-footer">
         <button class="upvote-image" type="button" name="button"></button>
