--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <button class="delete-image" type="button" name="button"></button>
       </section>
 
-      <textarea rows="4" cols="50" class='new-idea-body' placeholder="Body"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pharetra augue et risus tincidunt, id pellentesque risus maximus."></textarea>
+      <textarea rows="4" cols="36" class='new-idea-body' placeholder="Body"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pharetra augue et risus tincidunt, id pellentesque risus maximus."></textarea>
 
       <section class="new-idea-footer">
         <button class="upvote-image" type="button" name="button"></button>
@@ -44,7 +44,11 @@
       </section>
     </article>
 
-    <footer>Created by Jason Lucas and Evan Miller</footer>
+    <footer>
+      <div class="footer-box">
+        <p class="footer-text">Created by Jason Lucas and Evan Miller</p>
+      </div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="scripts.js"></script>
