add enter keypress

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
 
     <form class="search" action="index.html" method="post">
-      <input class='input-search' type="search" name="search" value="Search">
+      <input id='input-search' type="search" name="search" value="Search">
     </form>
 
     <article id="new-idea-article" class="new-idea-article">
