--- a/index.html
+++ b/index.html
@@ -9,47 +9,26 @@
     <title>Ideabox</title>
   </head>
   <body>
-
-
     <section class='header-wrapper'>
-
       <header>
         <h1 id='h1-idea' class='h1-idea'>idea</h1><h1 id='h1-box' class='h1-box'>box</h1>
       </header>
-
       <form class="form" action="index.html" method="post">
-        <input id='input-title' class='input-title' type="text" name="input1" value="Title">
-        <input id='input-body' class='input-body' type="text" name="input2" value="Body">
-        <button id="button-save" class="button-save" type="button" name="save">save</button>
+        <input id='input-title' class='input-title' type="text" name="input1" value="Title" maxlength="30">
+        <input id='input-body' class='input-body' type="text" name="input2" value="Body" maxlength="300">
+        <button id="button-save" class="button-save" type="button" name="save" disabled="true">save</button>
       </form>
-
     </section>
-
     <form class="search" action="index.html" method="post">
       <input id='input-search' type="search" name="search" value="Search">
     </form>
-
     <article id="new-idea-article" class="new-idea-article">
-      <!-- <section class="title-container">
-        <input type="text" class='new-idea-header' value='Example Idea' maxlength="30" size="35">
-        <button class="delete-image" type="button" name="button"></button>
-      </section>
-
-      <textarea rows="4" cols="42" class='new-idea-body' placeholder="Body"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pharetra augue et risus tincidunt, id pellentesque risus maximus."></textarea>
-
-      <section class="new-idea-footer">
-        <button class="upvote-image" type="button" name="button"></button>
-        <button class="downvote-image" type="button" name="button"></button>
-        <h3 class="h3-footer">quality:</h3><h3 class="quality">swill</h3>
-      </section> -->
     </article>
-
     <footer>
       <div class="footer-box">
         <p class="footer-text">Created by Jason Lucas and Evan Miller</p>
       </div>
     </footer>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="scripts.js"></script>
   </body>
