--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
         <button class="button-save" type="button" name="save" disabled="true">save</button>
       </form>
     </header>
-    <!-- <form class="search" action="index.html" method="post"> -->
+    <main>
       <input class="input-search" type="search" name="search" placeholder="Search">
-    <!-- </form> -->
-    <article class="new-idea-article">
-    </article>
-    <footer>
+      <section class="">
+        <article class="new-idea-article">
+        </article>
+      </section>
+
+    </main>
+    <!-- <footer>
       <div class="footer-box">
         <p class="footer-text">Created by Jason Lucas and Evan Miller</p>
       </div>
-    </footer>
+    </footer> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="scripts.js"></script>
   </body>
