initial html and css changes

--- a/index.html
+++ b/index.html
@@ -19,8 +19,22 @@
     </header>
     <main>
       <input class="input-search" type="search" name="search" placeholder="Search">
-      <section class="">
+      <section class="card-container">
         <article class="new-idea-article">
+
+          <div id="random" class="new-idea-article">
+      	    <div class='text-wrapper'>
+      				<input type="text" class='new-idea-header' value='this is the header' maxlength="30" size="35">
+      	    	<button id='delete-image' class="delete-image" type="button" name="button"></button>
+      				<textarea rows="4" cols="42" class='new-idea-body' value="">a very very long sentance a very very long sentance a very very long sentance a very very long sentance</textarea>
+      			</div>
+      	    <section class="new-idea-footer">
+      				<button id="upvote-image" class="upvote-image" type="button" name="button"></button>
+      				<button class="downvote-image" type="button" name="button"></button>
+      	    	<h3 class="h3-footer">quality:</h3><h3 id="quality">swill</h3>
+      	    </section>
+          </div>
+
         </article>
       </section>
 
