--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
           <div id="random" class="new-idea-article">
       	    <div class='text-wrapper'>
-      				<input type="text" class='new-idea-header' value='this is the header' maxlength="30" size="35">
+      				<input type="text" class="new-idea-header" maxlength="30" size="35">
       	    	<button id='delete-image' class="delete-image" type="button" name="button"></button>
-      				<textarea rows="4" cols="42" class='new-idea-body' value="">a very very long sentance a very very long sentance a very very long sentance a very very long sentance</textarea>
+      				<textarea rows="4" cols="42" class='new-idea-body'>a very very long sentance a very very long sentance a very very long sentance a very very long sentance</textarea>
       			</div>
       	    <section class="new-idea-footer">
       				<button id="upvote-image" class="upvote-image" type="button" name="button"></button>
