WIP: search function

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
         <article class="new-idea-article">
 
           <div id="random" class="new-idea-article">
-      	    <div class='text-wrapper'>
+      	    <div class=
+            "text-wrapper">
       				<input type="text" class="new-idea-header" maxlength="30" size="35">
-      	    	<button id='delete-image' class="delete-image" type="button" name="button"></button>
+      	    	<button class="delete-image" type="button" name="button"></button>
       				<textarea rows="4" cols="42" class='new-idea-body'>a very very long sentance a very very long sentance a very very long sentance a very very long sentance</textarea>
       			</div>
       	    <section class="new-idea-footer">
