search button refactor

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
           <div id="random" class="new-idea-article">
       	    <div class=
             "text-wrapper">
-      				<input type="text" class="new-idea-header" maxlength="30" size="35">
+      				<!-- <input type="text" class="new-idea-header" maxlength="30" size="35"> -->
+              <p class="new-idea-header">test text</p>
       	    	<button class="delete-image" type="button" name="button"></button>
       				<textarea rows="4" cols="42" class='new-idea-body'>a very very long sentance a very very long sentance a very very long sentance a very very long sentance</textarea>
       			</div>
