alter to do properties

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   </head>
   <body>
     <header class="header">
-      <h1 role="banner" class="h1-idea">idea<span>box</span></h1>
+      <h1 role="banner" class="h1-idea">2do<span>box</span></h1>
       <form class="form" action="index.html" method="post">
         <input class="input-title" type="text" name="input1" maxlength="30" placeholder="Title">
-        <input class="input-body" type="text" name="input2" maxlength="300" placeholder="Body">
+        <input class="input-task" type="text" name="input2" maxlength="300" placeholder="Task">
         <button class="button-save" type="button" name="save" disabled="true">save</button>
       </form>
     </header>
     <main role="main">
-      <input class="input-search" type="search" name="search" placeholder="Search">
+      <input class="input-search" type="search" name="search" placeholder="Filter">
       <section class="card-container">
       </section>
     </main>
