style completed task button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header class="header">
-      <h1 role="banner" class="h1-idea">2do<span>box</span></h1>
+      <h1 role="banner" class="h1-idea">2Do<span>Box</span></h1>
       <form class="form" action="index.html" method="post">
         <input class="input-title" type="text" name="input1" maxlength="30" placeholder="Title">
         <input class="input-task" type="text" name="input2" maxlength="300" placeholder="Task">
