add filter buttons and layout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
       </form>
     </header>
     <main role="main">
-      <input class="input-search" type="search" name="search" placeholder="Filter">
+        <input class="input-search" type="search" name="search" placeholder="Filter">
+        <div class="btn-container">
+        <button type="button" name="critical" class="filter-btn">Critical</button>
+        <button type="button" name="critical" class="filter-btn">High</button>
+        <button type="button" name="critical" class="filter-btn">Normal</button>
+        <button type="button" name="critical" class="filter-btn">Low</button>
+        <button type="button" name="critical" class="filter-btn">None</button>
+        <button type="button" name="critical" class="filter-btn">Show Completed ToDos</button>
+      </div>
+
       <section class="card-container">
       </section>
     </main>
