add functionality to create an array of objects from local storage

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button type="button" name="critical" class="filter-btn">Normal</button>
         <button type="button" name="critical" class="filter-btn">Low</button>
         <button type="button" name="critical" class="filter-btn">None</button>
-        <button type="button" name="critical" class="filter-btn">Show Completed ToDos</button>
+        <button type="button" name="critical" class="show-btn">Show Completed ToDos</button>
       </div>
 
       <section class="card-container">
