--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
         <button type="button" name="critical" class="filter-btn">Normal</button>
         <button type="button" name="critical" class="filter-btn">Low</button>
         <button type="button" name="critical" class="filter-btn">None</button>
-        <button type="button" name="critical" class="show-btn">Show Completed ToDos</button>
       </div>
+      <div class="btn-container">
+        <button type="button" name="critical" class="show-btn">Show Completed ToDos</button>
+        <button type="button" name="critical" class="show-more-btn">Show more TODOs ...</button>
+      </div>
+      
       <input class="input-search" type="search" name="search" placeholder="Filter">
 
       <section class="card-container">
