--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <button type="button" name="critical" class="filter-btn">Low</button>
         <button type="button" name="critical" class="filter-btn">None</button>
       </div>
-      <div class="btn-container">
+      <div class="btn-container" id="large-btn-container">
         <button type="button" name="critical" class="show-btn">Show Completed ToDos</button>
-        <button type="button" name="critical" class="show-more-btn">Show more TODOs ...</button>
+        <button type="button" name="critical" class="show-more-btn">Show more ToDos ...</button>
       </div>
-      
+
       <input class="input-search" type="search" name="search" placeholder="Filter">
 
       <section class="card-container">
